# Django_task

./: .gitignore  README.md
bookmark/bookmark/: models.py  views.py
bookmark/config/: settings.py  urls.py
bookmark/templates/: movies.html
class/blog/: pyproject.toml
class/blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
class/blog/config/: settings.py  urls.py
class/blog/member/: views.py
class/blog/templates/: about.html  base.html  blog.html  blog_create.html  blog_form.html  blog_list.html  blog_update.html  form-js.html  pagination.html  test_get.html  test_post.html
class/blog/utils/: models.py
class/bookmark/: pyproject.toml
class/bookmark/bookmark/: admin.py  models.py  views.py
class/bookmark/config/: settings.py  urls.py
class/bookmark/templates/: book.html  bookmark_list.html  books.html  gugu.html  gugus.html  movie.html
class/pycham_study/: pyproject.toml
oz_django_prc/: README.md  pyproject.toml
oz_django_prc/config/: settings.py
pycham_study/mysite/mysite/: settings.py
task/task1/config/: settings.py  urls.py
task/task1/templates/: users.html
task/task2-/config/: urls.py
task/task2-/templates/: base.html  comment.html  todo_info.html
task/task2-/todo/: cb_views.py  models.py  views.py
task/task2/todo/: models.py
task/task2_3/config/: settings.py  urls.py
task/task2_3/templates/: base.html  todo_list.html
task/task2_3/todo/: views.py
task1/config/: urls.py
task1/templates/: user.html  users.html
task2/: pyproject.toml
task2/templates/: todo_info.html
(+25 files in other folders)
